2001-06-02  Martin Baulig  <baulig@suse.de>

	* gnome-selector.c: Started to implement a new directory filter based on the
	"filter-patterns" property in the property bag.

	* gnome-selector.c (PROP_PBAG_AUTO_ADD_TO_LIST, PROP_PBAG_ACTIVATE_ENTRY_ACTION,
	PROP_PBAG_ADD_URI_MODE, PROP_PBAG_FILTER_PATTERNS): New properties.
	(PROP_PBAG_AUTO_ADD_TO_LIST): Removed.
	(impl_GNOME_Selector_getURIList): Implemented.

2001-06-02  Martin Baulig  <baulig@suse.de>

	* libgnome-init.c (gnome_mime_type): Add this here until bonobo-moniker-extender-file.c
	is fixed. You will be killed if you use this function !

2001-06-01  Martin Baulig  <baulig@suse.de>

	* gnome-selector.c (PROP_PBAG_MAX_HISTORY_LINES): Implemented.

	* gnome-selector.c (PROP_PBAG_PREVIEW_URI): New read-only property.

	* gnome-selector.c (PROP_PBAG_HISTORY): Implemented this property.
	(PROP_PBAG_AUTO_ACTIVATE_ENTRY): New property.
	(get_uri_handler, set_uri_handler): The default implementation is to save/return the
	URI, so make sure to call the parent handler in derived classes.
	(set_entry_text_handler): Call gnome_selector_activate_entry if the
	PROP_PBAG_AUTO_ACTIVATE_ENTRY property is set.
	(activate_entry_handler): Add the entry text to the history.

	* gnome-selector.h (gnome_selector_load_history, gnome_selector_save_history): Removed.
	(gnome_selector_prepend_history, gnome_selector_append_history): Removed the
	`gboolean save' argument.

2001-06-01  Martin Baulig  <baulig@suse.de>

	* gnome-selector.c
	(PROP_PBAG_ENTRY_TEXT, PROP_PBAG_HISTORY, PROP_PBAG_MAX_HISTORY_LINES): New properties
	in the PropertyBag.

2001-06-01  Martin Baulig  <baulig@suse.de>

	* gnome-selector.c
	(gnome_selector_get_property_bag): Renamed to gnome_selector_get_ambient_properties().
	(PROP_PROPERTY_BAG): Renamed to PROP_AMBIENT_PROPERTIES.
	(gnome_selector_construct): bonobo_object_add_interface() our Bonobo::EventSource and
	our GNOME::AsyncContext and create and bonobo_object_add_interface() a new
	Bonobo::PropertyBag.
