@@ -1,5 +1,11 @@
 2001-06-02  Martin Baulig  <baulig@suse.de>
 
+	* gnome-directory-filter.[ch]: Removed.
+
+	* gnome-selector.c: Removed the GnomeDirectoryFilter stuff.
+
+2001-06-02  Martin Baulig  <baulig@suse.de>
+
 	* gnome-selector.c: Started to implement a new directory filter based on the
 	"filter-patterns" property in the property bag.
 
